# Stability-Aware-Simplification-of-Curve-Networks

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
input/curves/: hill_3.txt  kagome_114_regular.txt  roof_75.txt  shell_100.txt  shell_100_for_arcs.txt  shell_3.txt  shell_arcs.txt  shell_elipse.txt  tent_3_regular_curves.txt  tent_curves.txt  tower_32.txt  tower_top_ring.txt
src/: aux_tools.cpp  aux_tools.h  cn_eigen_solver.cpp  cn_eigen_solver.h  cn_greedy_solver.cpp  cn_greedy_solver.h  cn_newton_solver.cpp  cn_newton_solver.h  constants.h  curve.cpp  curve.h  curve_network.cpp  curve_network.h  curve_set.cpp  curve_set.h  examples.cpp  examples.h  intersection.cpp  intersection.h  intersection_set.cpp  intersection_set.h  load_curves.cpp  load_curves.h  main.cpp  surface.cpp  surface.h  test_network_generator.cpp  test_network_generator.h
